--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.14.2",
+    "@emotion/react": "^11.14.0",
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.0.17",
+    "lucide-react": "^0.484.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
